replay bug fixes